started readme file and added website screenshots

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,7 @@ p {
 
 /* right column end */
 
+/* footer start */
 .footer {
     padding: 30px;
     clear: both;
@@ -210,3 +211,5 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
+/* footer end */
